# formation-deep-learning

./: README.md  first_exercise.ipynb  first_exercise.py  pyproject.toml  second_excercise.ipynb  second_excercise.py
